--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,10 @@
 $app-primary: rgb(0, 89, 255);
 $app-shadow: coral;
 
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
 @keyframes rubberBandUp {
   0% {
     transform: translateY(0);
@@ -29,7 +33,6 @@ $app-shadow: coral;
   }
 }
 
-
 .page-wrapper {
   display: flex;
   flex-direction: column;
@@ -38,8 +41,6 @@ $app-shadow: coral;
   .header {
     margin: 20px 0;
     text-align: center;
-
-    
   }
 
   .card-wrapper {
@@ -49,9 +50,9 @@ $app-shadow: coral;
     gap: 25px;
 
     .card {
-      flex: 1 1 calc(25% - 25px); // Adjust width dynamically while maintaining gap
-      max-width: 300px; // Ensure cards don't exceed this width
-      min-width: 200px; // Set a minimum width for smaller screens
+      flex: 1 1 calc(25% - 25px);
+      max-width: 300px;
+      min-width: 200px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -87,6 +88,7 @@ $app-shadow: coral;
           margin: 0;
           padding: 0;
         }
+
         & > p:nth-child(2) {
           text-transform: none;
           margin: 0 40px;
@@ -98,7 +100,7 @@ $app-shadow: coral;
       .card-graphic {
         width: 100%;
         height: 0;
-        padding-top: 100%; // Maintain a square aspect ratio
+        padding-top: 100%;
         position: relative;
 
         &-wrapper {
@@ -177,6 +179,12 @@ $app-shadow: coral;
       }
     }
   }
+
+  @media (max-width: 992px) {
+    .card-wrapper {
+      gap: 20px;
+    }
+  }
 }
 
 #grid-graphic {
@@ -188,7 +196,7 @@ $app-shadow: coral;
     position: absolute;
   }
 
-  &>div:nth-child(1) {
+  & > div:nth-child(1) {
     width: 45%;
     height: 45%;
     top: 5%;
@@ -196,7 +204,7 @@ $app-shadow: coral;
     border-right: 1px solid white;
   }
 
-  &>div:nth-child(2) {
+  & > div:nth-child(2) {
     width: 45%;
     height: 45%;
     top: 50%;
@@ -204,7 +212,7 @@ $app-shadow: coral;
     border-right: 1px solid white;
   }
 
-  &>div:nth-child(3) {
+  & > div:nth-child(3) {
     width: 45%;
     height: 45%;
     top: 5%;
@@ -212,7 +220,7 @@ $app-shadow: coral;
     border-bottom: 1px solid white;
   }
 
-  &>div:nth-child(4) {
+  & > div:nth-child(4) {
     width: 45%;
     height: 45%;
     top: 5%;
@@ -232,14 +240,14 @@ $app-shadow: coral;
     right: 0;
   }
 
-  &>div:nth-child(1) {
+  & > div:nth-child(1) {
     width: 100%;
     height: 100%;
     background-color: #cccccc;
     border-radius: 8px;
   }
 
-  &>div:nth-child(2) {
+  & > div:nth-child(2) {
     width: 90%;
     height: 90%;
     
@@ -248,7 +256,7 @@ $app-shadow: coral;
     border-bottom-left-radius: 100%;
   }
 
-  &>div:nth-child(3) {
+  & > div:nth-child(3) {
     width: 70%;
     height: 70%;
   
@@ -257,7 +265,7 @@ $app-shadow: coral;
     border-bottom-left-radius: 100%;
   }
 
-  &>div:nth-child(4) {
+  & > div:nth-child(4) {
     width: 50%;
     height: 50%;
   
@@ -272,11 +280,11 @@ $app-shadow: coral;
   height: 100%;
   position: relative;
 
-  &>div {
+  & > div {
     position: absolute;
   }
 
-  &>div:nth-child(1) {
+  & > div:nth-child(1) {
     width: 90%;
     height: 90%;
     top: 5%;
@@ -285,7 +293,7 @@ $app-shadow: coral;
     border: 1px solid white;
   }
 
-  &>div:nth-child(2) {
+  & > div:nth-child(2) {
     width: 74%;
     height: 74%;
     top: 13%;
@@ -294,7 +302,7 @@ $app-shadow: coral;
     border: 1px solid white;
   }
 
-  &>div:nth-child(3) {
+  & > div:nth-child(3) {
     width: 58%;
     height: 58%;
     top: 21%;
@@ -303,7 +311,7 @@ $app-shadow: coral;
     border: 1px solid white;
   }
 
-  &>div:nth-child(4) {
+  & > div:nth-child(4) {
     width: 42%;
     height: 42%;
     top: 29%;
@@ -312,7 +320,7 @@ $app-shadow: coral;
     border: 1px solid white;
   }
 
-  &>div:nth-child(5) {
+  & > div:nth-child(5) {
     width: 26%;
     height: 26%;
     top: 37%;
@@ -321,7 +329,7 @@ $app-shadow: coral;
     border: 1px solid white;
   }
 
-  &>div:nth-child(6) {
+  & > div:nth-child(6) {
     width: 45%;
     height: 45%;
     top: 5%;
@@ -329,14 +337,14 @@ $app-shadow: coral;
     border-right: 1px solid white;
   }
 
-  &>div:nth-child(7) {
+  & > div:nth-child(7) {
     width: 45%;
     height: 45%;
     top: 50%;
     left: 5%;
     border-right: 1px solid white;
   }
-  &>div:nth-child(8) {
+  & > div:nth-child(8) {
     width: 45%;
     height: 45%;
     top: 5%;
@@ -344,7 +352,7 @@ $app-shadow: coral;
     border-bottom: 1px solid white;
   }
 
-  &>div:nth-child(9) {
+  & > div:nth-child(9) {
     width: 45%;
     height: 45%;
     top: 5%;
